<resources>
    <string name="app_name">Gartrip</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="email">Correo</string>
    <string name="iniciarSesion">INICIAR SESIÓN</string>
    <string name="contraseña">Contraseña</string>
    <string name="repetirContraseña">Repetir contraseña</string>
    <string name="volver">VOLVER</string>
    <string name="tienda">Tienda</string>
    <string name="telefonos">Teléfonos</string>
    <string name="ordenadores">Ordenadores</string>
    <string name="consolas">Consolas</string>
    <string name="otros">Otros</string>
    <string name="perfil">Perfil</string>
    <string name="idioma">Idioma</string>
    <string name="preferencias">Preferencias</string>
    <string name="pagar">Pagar</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="editar">EDITAR</string>
    <string name="seleccionarfoto">SELECCIONAR FOTO</string>
    <string name="guardar">GUARDAR</string>
    <string name="datosUsuario">Datos usuario</string>
    <string name="preferenciasUsuario">Preferencias usuario</string>
    <string name="introduceNombreFactura">Introduce un nombre para la factura</string>
    <string name="introduceNombre">Introduce un nombre</string>
    <string name="MayorDeEdad">¿Eres mayor de edad?</string>
    <string name="mostrarPrecios">Mostrar precios</string>
    <string name="mostrarPreciosProductos">Mostrar los precios de los productos</string>
    <string name="idiomaPorDefecto">Seleccione el idioma por defecto al lanzar la aplicación</string>
    <string name="seleccioneIdioma">Seleccione un idioma</string>
    <string name="español">Español</string>
    <string name="euskera">Euskera</string>
    <string name="Ingles">Inglés</string>
    <string name="ajustes">Ajustes</string>
    <string name="marcaOpcion">Marca esta opción si eres mayor de edad</string>
    <string name="registrarse">REGISTRARSE</string>
    <string name="compraRealizada">Compra realizada</string>
    <string name="facturaEnviada">La factura ha sido enviada a su telefono vía notificaciones</string>
    <string name="factura">Factura</string>
    <string name="anonimo">Anónimo</string>
    <string name="compra">"Ha reservado "</string>
    <string name="precioCompra">. Precio: </string>
    <string name="mayorEdadCompra">¡Tienes que ser mayor de edad para comprar!</string>
    <string name="comprar">Comprar</string>
    <string name="salir">Salir</string>
    <string name="usuarioContraseña">El usuario o contraseña son incorrectos</string>
    <string name="registroCorrecto">Usuario registrado</string>
    <string name="apellido">Apellido</string>
    <string name="opinar">Da tu opinion</string>
    <string name="hoteles">Hoteles</string>
    <string name="completarReserva">Completar reserva</string>
    <string name="sobreNosotros">Sobre Nosotros</string>
    <string name="contrasenasNoCoin">¡CUIDADO! Las contraseñas no coinciden</string>
    <string name="camposObligatorios">¡Todos los campos son obligatorios!</string>
    <string name="correoExistente">¡El correo ya existe en esta aplicación!</string>
    <string name="gmail">¡El gmail introducido no tiene la estuctura correcta!</string>
    <string name="error">¡Error!</string>
    <string name="imagenSeleccionada">No selecciono ninguna imagen</string>
    <string name="imagenSacada">No hizo ninguna foto</string>
    <string name="permisosMapa">Se requieren permisos de ubicación para continuar.</string>
    <string name="noResultado">No se ha encontrado ningun resultado</string>
    <string name="modoBack">Activa el modo background para un correcto funcionamiento</string>
    <string name="atencionCliente">ATENCIÓN AL CLIENTE</string>
    <string name="atencion11">Estamos aquí para ayudarte en todo momento y asegurarnos de que tengas la mejor experiencia posible con nuestros servicios. Si tienes alguna pregunta, consulta o necesitas asistencia, no dudes en comunicarte con nosotros. Nuestro equipo de atención al cliente altamente capacitado está listo para atender tus inquietudes y brindarte el apoyo que necesitas. Para cualquier duda no dude en llamar al telefono que aparece abajo.</string>
    <string name="bienvenidoAten">¡Bienvenido al servicio de Atención al Cliente de nuestra aplicación de hoteles!</string>
    <string name="hacerFoto">Hacer foto</string>
    <string name="lugarRecogida">Lugar de recogida</string>
    <string name="Volver">Volver</string>
    <string name="Producto">Producto</string>
    <string name="Precio">Precio</string>
    <string name="Notificar">Notificar</string>
    <string name="Factura">Factura</string>
    <string name="miPerfil">MI PERFIL</string>
    <string name="datosPer">Mis datos Personales</string>
    <string name="Ayuda">Ayuda</string>
    <string name="text1">Nombre del hotel o destino...</string>
    <string name="PrecioMax">Precio máximo:</string>
    <string name="nosotros1">Gartrip es una aplicacion de busqueda de hoteles. En Gartrip estamos dedicados a brindarte una experiencia excepcional al encontrar el alojamiento perfecto para tus viajes. Permítenos compartir un poco más sobre nosotros:</string>
    <string name="cancelacion">CANCELACION DE ALOJAMIENTO</string>
    <string name="politica">Nuestra politica, no acepta ninguna cancelacion de ningun alojamiento.</string>
    <string name="entrada">La entrada a la habitacien de todos nuestros alojamientos es a partir de las 15:00.</string>
    <string name="salida">La salida de la habitacion debe se antes de las 11:00, en caso de tener tu vuelo mas tarde de esa hora estaremos dispuesto a guardar la maleta, mientras sigues disfrutando de tu destino.</string>
    <string name="eurosNoche">€/noche</string>
    <string name="Serviciosdestacados">Servicios destacados</string>
    <string name="Opciondesayuno">Opcion desayuno</string>
    <string name="Aireacondicionado">Aire acondicionado</string>
    <string name="Piscina">Piscina</string>
    <string name="Parking">Parking</string>
    <string name="Servicioespecial">Servicio especial</string>
    <string name="descubre">Descubre tu hotel</string>
    <string name="hoyEn">Hoy en Gartrip Hoteles...</string>
    <string name="Actualizar">Actualizar</string>
    <string name="Hotelmáscercano">Hotel más cercano</string>
</resources>