<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:key="dat_usuario"
        app:title="@string/datosUsuario">

        <CheckBoxPreference
            app:key="mayorEdad"
            app:title="@string/MayorDeEdad"
            app:summary="@string/marcaOpcion" />

    </PreferenceCategory>

    <PreferenceCategory
        app:key="pref_usuario"
        app:title="@string/preferenciasUsuario">

        <ListPreference
            app:dialogTitle="@string/seleccioneIdioma"
            app:entries="@array/idiomas"
            app:entryValues="@array/codigoIdiomas"
            app:key="idiomaPrefs"
            app:summary="@string/idiomaPorDefecto"
            app:title="@string/idioma" />

    </PreferenceCategory>

</PreferenceScreen>