<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textoMiPeerfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/miPerfil"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imagenPerfilPrincipal"
        android:layout_width="236dp"
        android:layout_height="226dp"
        android:layout_marginTop="20dp"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textoMiPeerfil"
        app:srcCompat="@drawable/iconomobile" />

    <TextView
        android:id="@+id/nombrePerfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagenPerfilPrincipal" />

    <TextView
        android:id="@+id/textoDatosPersonales"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/datosPer"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombrePerfil" />

    <ImageButton
        android:id="@+id/boton1"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="80dp"
        android:background="#00FFFFFF"
        android:contentDescription="boton1"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombrePerfil"
        app:srcCompat="@drawable/ic_action_name" />

    <TextView
        android:id="@+id/textoTarjetas"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/sobreNosotros"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textoDatosPersonales" />

    <ImageButton
        android:id="@+id/boton2"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="80dp"
        android:background="#00FFFFFF"
        android:contentDescription="boton2"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boton1"
        app:srcCompat="@drawable/ic_action_name" />

    <TextView
        android:id="@+id/ç"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/Ayuda"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textoTarjetas" />

    <ImageButton
        android:id="@+id/boton3"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="80dp"
        android:background="#00FFFFFF"
        android:contentDescription="boton3"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boton2"
        app:srcCompat="@drawable/ic_action_name" />

    <TextView
        android:id="@+id/preferencias"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/preferencias"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ç" />

    <ImageButton
        android:id="@+id/boton4"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="80dp"
        android:background="#00FFFFFF"
        android:contentDescription="boton4"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boton3"
        app:srcCompat="@drawable/ic_action_name" />


</androidx.constraintlayout.widget.ConstraintLayout>